--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-responsive": "^10.0.1",
+    "resend": "^4.6.0",
     "styled-components": "^6.1.19",
     "zod": "^3.25.67"
   },
