--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-responsive": "^10.0.1",
     "resend": "^4.6.0",
     "styled-components": "^6.1.19",
-    "zod": "^3.25.67"
+    "zod": "^3.25.67",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
